Implement virtual version of getClinicalAttributeCountsBySampleIds